alignment issue solved

--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -638,6 +638,9 @@
           padding: 6px 20px;
       }
   }
+  .product-detail p{
+  height: 40px;
+  }
   .product-sizes {
     ul {
       li{
@@ -1316,7 +1319,7 @@
 
     .product-detail {
         h4 {
-          
+
             font-size: 15px;
         }
 
